View rotates not around of the point of interaction. (Vertex paint mode and weight paint mode) #72577

Closed
opened 2019-12-19 15:28:24 +01:00 by Alexander · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-18 22:47, hash: da6929488a
Worked: (optional)

Short description of error
Well, with the "orbit around selection" option enabled, in vertex painting mode, the view no longer orbits around the selected point. Instead, it rotates around the center of the coordinates (0, 0, 0). Same problem in weight painting mode. It's works fine in sculpt and paint modes.

Exact steps for others to reproduce the error
Create any test object, sphere for example. Move test object wherever from the center of the coordinates. Set interaction mode to vertex paint. Rotate view - rotation is around object. Click on object and rotate view - rotation is around the center of the coordinates. Click at any place beyond object and rotate view - rotation is around the center of object, but not around the point of interaction as should, like in sculpt mode, for example.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-18 22:47, hash: `da6929488a` Worked: (optional) **Short description of error** Well, with the "orbit around selection" option enabled, in vertex painting mode, the view no longer orbits around the selected point. Instead, it rotates around the center of the coordinates (0, 0, 0). Same problem in weight painting mode. It's works fine in sculpt and paint modes. **Exact steps for others to reproduce the error** Create any test object, sphere for example. Move test object wherever from the center of the coordinates. Set interaction mode to vertex paint. Rotate view - rotation is around object. Click on object and rotate view - rotation is around the center of the coordinates. Click at any place beyond object and rotate view - rotation is around the center of object, but not around the point of interaction as should, like in sculpt mode, for example.
Author

Added subscriber: @AlexanderFomin

Added subscriber: @AlexanderFomin
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-12-19 16:11:21 +01:00
Member

Can confirm, was implemented in 7a633d7c4f (and working in 2.79b), then was broken, fixed again in 965bd4c8c3 (and working in 2.80), now broken again, checking...

Can confirm, was implemented in 7a633d7c4f (and working in 2.79b), then was broken, fixed again in 965bd4c8c3 (and working in 2.80), now broken again, checking...
Member

Caused by 14acac0bb7

Caused by 14acac0bb7

This issue was referenced by c0dd9908ff

This issue was referenced by c0dd9908ff880534c66b3c43604b4eb6e82d43d6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72577
No description provided.